[package]
name = "snake"
version = "0.1.0"
authors = ["Aidan Pinard <aidan@aidanpinard.co>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "snake"
test = false
bench = false

[dependencies]
#panic-halt = "0.2.0"
avr-device = "0.3.4"
ufmt = "0.1.0"
nb = "0.1.2"
embedded-hal = "0.2.3"
picorand = "0.1.1"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "1aacefb335517f85d0de858231e11055d9768cdf"
features = ["arduino-mega2560", "rt"]

[dependencies.avr-hal-generic]
git = "https://github.com/rahix/avr-hal"
rev = "1aacefb335517f85d0de858231e11055d9768cdf"

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
